--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.17",
+    "mongoose-unique-array": "^0.4.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.8",
     "pug": "^3.0.0",
@@ -37,5 +38,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "prettier": "^2.0.5"
+  },
+  "engines" : { 
+    "node": "^14"
   }
 }
